--- a/KeepTrackr.Client/src/features/kanban/Card/Card.css
+++ b/KeepTrackr.Client/src/features/kanban/Card/Card.css
@@ -1,14 +1,14 @@
 .custom__card {
-  background-color: var(--card-color);
-  border-radius: 3px;
-  box-shadow: 0px 2px var(--card-box-shadow);
-  margin-inline: auto;
-  padding-inline: 0.5rem;
-  padding-bottom: 0.4rem;
-  /* cursor: grab; */
-  color: var(--text-color);
-  margin-bottom: 10px;
-  /* position: relative; */
+    background-color: var(--card-color);
+    border-radius: 3px;
+    box-shadow: 0px 2px var(--card-box-shadow);
+    margin-inline: auto;
+    padding-inline: 0.5rem;
+    /* cursor: grab; */
+    color: var(--text-color);
+    /* position: relative; */
+    margin-bottom: 3px;
+    padding-bottom: 0;
 }
 .card__tags {
   display: flex;
@@ -22,6 +22,11 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+}
+
+
+.card__text p{
+    margin:0;
 }
 
 .car__more {
